# toolchat

./: README.md  pyproject.toml  sample-tools.yml  tools.yml.sample
src/toolchat/: chat.py  cli.py  mcpclient.py  render.py  tools.py
